# CudaVectorLib

./: .gitignore  CMakeLists.txt  readme.md
docs/: benchmarks.md  usage.md
docs/data/: 01-add.csv  02-mul.csv  03-matrix-add.csv  05-scalar-mul.csv  06-cosine-vector.csv  07-matrix-mul.csv  report.ipynb
include/: CommonUtils.cuh  Matrix.cuh  MatrixOps.cuh  Reduce.cuh  Vector.cuh  VectorOps.cuh
include/kernels/: Filter.cuh  MatrixAdd.cuh  MatrixMul.cuh  MatrixVectorMul.cuh  Reduce.cuh  VectorAdd.cuh  VectorMul.cuh  VectorScalarMul.cuh
runners/: 01-add.cu  02-mul.cu  03-matrix-add.cu  04-matrix-vector-mul.cu  05-scalar-mul.cu  06-cosine-vector.cu  07-matrix-mul.cu
scripts/: run-bench.sh  run-linear.sh  run-square.sh
src/: CMakeLists.txt  CommonUtils.cu  Matrix.cu  MatrixOps.cu  Reduce.cu  Vector.cu  VectorOps.cu
src/kernels/: CMakeLists.txt  Filter.cu  MatrixAdd.cu  MatrixMul.cu  MatrixVectorMul.cu  Reduce.cu  VectorAdd.cu  VectorMul.cu  VectorScalarMul.cu
